fix horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     line-height: 1.6;
     color: #333;
     background-color: #fff;
+    overflow-x: hidden;
 }
 
 .container {
@@ -1234,6 +1235,8 @@ section {
     min-height: 60vh;
     display: flex;
     align-items: center;
+    width: 100%;
+    max-width: 100vw;
 }
 
 .walkthrough-hero::before {
@@ -1308,7 +1311,7 @@ section {
         background-position: -200px 0, -150px 0, 0% 0%; 
     }
     100% { 
-        background-position: calc(100vw + 200px) 0, calc(100vw + 150px) 0, 100% 100%; 
+        background-position: calc(100% + 200px) 0, calc(100% + 150px) 0, 100% 100%; 
     }
 }
 
